force-app/main/default/objects/Bank_Receipt__c/Bank_Receipt__c.object-meta.xml
<CustomObject>
    <label>Bank Receipt</label>
    <nameField>
        <displayFormat>BRC-102-{YY}-{MM}-{00000}</displayFormat>
        <label>Bank Receipt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>