force-app/main/default/objects/Bank_Receipt__c/fields/Account_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Account_Identifier__c</fullName>
    <label>Account Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>