force-app/main/default/objects/Bank_Receipt__c/fields/Allocated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Amount__c</fullName>
    <label>Allocated Amount</label>
    <summarizedField>BRC_PR_Allocation__c.PR_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>BRC_PR_Allocation__c.Deallocated__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>BRC_PR_Allocation__c.Bank_Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>