force-app/main/default/objects/Bank_Receipt__c/fields/BRC_Mode__c.field-meta.xml
<CustomField>
    <fullName>BRC_Mode__c</fullName>
    <label>BRC Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TT</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>OTC</fullName>
            </value>
            <value>
                <fullName>OTC HO</fullName>
            </value>
            <value>
                <fullName>MC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>