force-app/main/default/objects/Bank_Receipt__c/fields/Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Amount__c</fullName>
    <description>Decimals given for precision in case of IWT conversions and Domestic deductions</description>
    <label>Credit Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>