force-app/main/default/objects/Bank_Receipt__c/fields/PR_Mode__c.field-meta.xml
<CustomField>
    <fullName>PR_Mode__c</fullName>
    <description>Is populated from BRC_Mode and is used to determine the modetype and othertype in the ReceiptHeader Payload</description>
    <label>PR Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>International Wire Transfer</fullName>
            </value>
            <value>
                <fullName>Domestic Wire Transfer</fullName>
            </value>
            <value>
                <fullName>CDM - Cheque</fullName>
            </value>
            <value>
                <fullName>CDM - Cash</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>