force-app/main/default/objects/Bank_Receipt__c/fields/Source_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_Currency_Code__c</fullName>
    <label>Source Currency Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AED</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>