force-app/main/default/objects/Bank_Receipt__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&quot;Default&quot;</defaultValue>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Internal Transfer</fullName>
            </value>
            <value>
                <fullName>Recall</fullName>
            </value>
            <value>
                <fullName>Regularization</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Sweep in</fullName>
            </value>
            <value>
                <fullName>Transaction Reverse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>