force-app/main/default/objects/Bank_Receipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Identifier__c</columns>
    <columns>Allocated_Amount__c</columns>
    <columns>BRC_Mode__c</columns>
    <columns>Credit_Amount__c</columns>
    <columns>Description__c</columns>
    <columns>GL_Date__c</columns>
    <columns>Instrument_Number__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>PR_Mode__c</columns>
    <columns>Realized_Currency_Code__c</columns>
    <columns>Source_Currency_Code__c</columns>
    <columns>Type__c</columns>
    <columns>Unallocated_Amount__c</columns>
    <columns>XP_BRC_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>